samples/_failures_safe/1761317283_8f4e3f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a29e8cfe.c: In function ‘main’:
./samples/SAFE/__tmp_a29e8cfe.c:141:17: error: expected ‘;’ at end of input
  141 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_a29e8cfe.c:141:9: error: expected declaration or statement at end of input
  141 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_a29e8cfe.c:141:9: error: expected declaration or statement at end of input
